# TeachmintShareX_ifp

./: .gitignore  BUILD_STATUS.md  DEVICE_DETECTION.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  PLATFORM_NOTES.md  README.md  REMOTE_SIGNALING_SETUP.md  WEBRTC_SETUP.md  build.gradle.kts  default-permissions-com.example.teachmintsharex.xml  default-permissions-com.teachmint.shareX.xml  default-permissions-com.teachmint.teachmintsharex.xml  deploy_miracast_privapp.sh  deploy_system.sh  gradle.properties  grant_runtime_permissions.sh  privapp-permissions-com.example.teachmintsharex.xml  privapp-permissions-com.teachmint.shareX.xml  privapp-permissions-com.teachmint.teachmintsharex.xml  quick_update.sh  settings.gradle.kts
composeApp/: CMakeLists.txt  build.gradle.kts  consumer-rules.pro  desktop-rules.pro  proguard-rules.pro
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/cpp/miracast/: rtp_parser.cpp
composeApp/src/androidMain/cpp/miracast/include/: rtp_receiver.h
composeApp/src/androidMain/jni/: CMakeLists.txt
composeApp/src/androidMain/kotlin/com/teachmint/sharex/: MainActivity.kt  Platform.android.kt
composeApp/src/androidMain/kotlin/com/teachmint/sharex/airplay/: AirPlayAudioReceiver.kt  AirPlayPairingHandler.kt  AirPlayProtocol.kt  AirPlayReceiverHolder.kt  AirPlayReceiverScreen.kt  AirPlayRtspServer.kt  AirPlayUnifiedServer.kt  PlayfairNative.kt
composeApp/src/androidMain/kotlin/com/teachmint/sharex/crashlytics/: CrashlyticsLogger.kt
composeApp/src/androidMain/kotlin/com/teachmint/sharex/filetransfer/: FileOpener.android.kt  FilePicker.android.kt  TransferredFilesRepository.android.kt
composeApp/src/androidMain/kotlin/com/teachmint/sharex/remoteconfig/: AppRemoteConfig.android.kt  RemoteConfigManager.kt  ShareXRemoteConfig.kt
composeApp/src/androidMain/kotlin/com/teachmint/sharex/share/: AccessibilityServicePromptHandler.android.kt  AirPlayHostGridBridge.android.kt  AirPlayMirrorOverlay.android.kt  AndroidBindings.kt  AndroidContextHolder.kt  DeviceTypeDetector.android.kt  DiscoveryService.android.kt  HostScreenCaptureSignalBridge.android.kt  HostSignalingServer.android.kt  IceServerConfig.android.kt  InputInjector.android.kt  MiracastAdvertiserBootReceiver.kt  MiracastAdvertiserService.kt  MiracastHostGridBridge.android.kt  MultiWindowMode.android.kt  OrientationControl.android.kt  PlatformAudioTrack.android.kt  PlatformVideoTrack.android.kt  QRCodeGenerator.android.kt  RemoteServerConfig.android.kt  ScreenCapturePermissionData.android.kt  ScreenCapturePermissionHandler.android.kt  ScreenCaptureService.kt  (+4 more)
composeApp/src/androidMain/res/values/: strings.xml  styles.xml
composeApp/src/androidMain/res/xml/: remote_control_accessibility_config.xml
composeApp/src/commonMain/composeResources/drawable/: check_icon.xml  connected_device_icon.xml  delete_icon.xml  entire_screen_icon.xml  extend_screen_icon.xml  full_screen_icon.xml  host_enabled_icon.xml  ic_cast.xml  ic_close.xml  ic_edit.xml  ic_folder.xml  ic_keyboard.xml  ic_lock.xml  ic_qr_code.xml  ic_remote.xml  ic_settings.xml  ic_upload.xml  ic_volume_on.xml  laptop_icon.xml  link_icon.xml  mobile_icon.xml  no_host_found_icon.xml  pin_icon.xml  record_icon.xml  refresh_icon.xml  remote_control_icon.xml  reverse_screen_icon.xml  reverse_sharing_disabled_icon.xml  reverse_sharing_enable_icon.xml  right_arrow_icon.xml  screen_cast_enabled_icon.xml  screen_exclusive_disabled_icon.xml  screen_exclusive_enable_icon.xml  search_icon.xml  settings_icon.xml  share_x_text_icon.xml  sharex_diaplay_icon.xml  sharex_icon.xml  speaker_icon.xml  tv_icon.xml  (+1 more)
composeApp/src/commonMain/composeResources/files/: wireless_connecting.json
composeApp/src/commonMain/composeResources/values/: strings.xml
composeApp/src/commonMain/kotlin/com/teachmint/sharex/: Platform.kt
composeApp/src/main/assets/files/: smart_tv.json
composeApp/src/main/cpp/miracast/: jni_bridge.cpp  rtp_receiver.cpp  ts_demuxer.cpp
composeApp/src/main/cpp/miracast/include/: ts_demuxer.h
composeApp/src/main/jni/: playfair_jni.c
composeApp/src/main/kotlin/com/teachmint/sharex/: App.kt  Greeting.kt  Platform.android.kt  Platform.kt
composeApp/src/main/res/drawable/: file_transfer_icon.xml  ic_chevron_right.xml  ic_search_line.xml  left_arrow_icon.xml  remove_icon.xml  sharex_app_icon.xml  speaker_icon_off.xml  wifi_icon.xml
composeApp/src/main/res/values/: colors.xml  strings.xml
composeApp/src/main/res/values-ar/: strings.xml
composeApp/src/main/res/values-bn/: strings.xml
composeApp/src/main/res/values-fa/: strings.xml
composeApp/src/main/res/values-hi/: strings.xml
composeApp/src/main/res/values-in/: strings.xml
composeApp/src/main/res/values-kn/: strings.xml
composeApp/src/main/res/values-ne/: strings.xml
composeApp/src/main/res/values-si/: strings.xml
composeApp/src/main/res/values-th/: strings.xml
composeApp/src/main/res/values-vi/: strings.xml
composeApp/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml  network_security_config.xml
composeApp/src/test/kotlin/com/teachmint/sharex/: ComposeAppCommonTest.kt
(+220 files in other folders)
